fix(addon-doc): fix vertical scrollbar height for root content

--- a/projects/addon-doc/src/components/main/main.style.less
+++ b/projects/addon-doc/src/components/main/main.style.less
@@ -7,7 +7,7 @@ html {
     height: auto;
 }
 
-tui-root > tui-scroll-controls {
+tui-root > tui-scroll-controls > .bar_vertical {
     top: @sticky-header-height !important;
 }
 
